--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,11 @@
         "evenement/evenement": "^2.0|^3.0",
         "facade/ignition-contracts": "^1.0",
         "guzzlehttp/psr7": "^1.5",
-        "illuminate/broadcasting": "^6.0|^7.0",
-        "illuminate/console": "^6.0|^7.0",
-        "illuminate/http": "^6.0|^7.0",
-        "illuminate/routing": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0",
+        "illuminate/broadcasting": "^6.0|^7.0|^8.0",
+        "illuminate/console": "^6.0|^7.0|^8.0",
+        "illuminate/http": "^6.0|^7.0|^8.0",
+        "illuminate/routing": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0",
         "pusher/pusher-php-server": "^3.0|^4.0",
         "react/promise": "^2.0",
         "symfony/http-kernel": "^4.0|^5.0",
@@ -42,8 +42,9 @@
     },
     "require-dev": {
         "clue/block-react": "^1.4",
+        "laravel/legacy-factories": "^1.0.4",
         "mockery/mockery": "^1.3",
-        "orchestra/testbench-browser-kit": "^4.0|^5.0",
+        "orchestra/testbench-browser-kit": "^4.0|^5.0|^6.0",
         "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
